# prolog-parser

./: .gitignore  CMakeLists.txt  ExpressionTree.cpp  ExpressionTree.hpp  ExpressionTreeTests.cpp  GUITests.cpp  Gui.cpp  Gui.hpp  KnowledgeBase.cpp  KnowledgeBase.hpp  KnowledgeBaseTests.cpp  KnowledgeBaseUtility.cpp  KnowledgeBaseUtility.hpp  KnowledgeBaseUtilityTests.cpp  Lexer.cpp  Lexer.hpp  LexerTests.cpp  Parser.cpp  Parser.hpp  ParserTests.cpp  README.md  TUITests.cpp  Token.cpp  Token.hpp  TokenTests.cpp  Unification.cpp  Unification.hpp  UnificationTests.cpp  UnitTests.cpp  Vagrantfile  test_config.hpp.in  vtpl-ide.cpp  vtpl.cpp
scripts/: coverage.sh  repl_test.py
tests/: example1.pro  facts.pro  family.pro  likes.pro  simple.pro
